hphp/hack/test/typecheck/fun_contra_bad.php.exp
File "fun_contra_bad.php", line 8, characters 11-12:
Invalid argument (Typing[4110])
File "fun_contra_bad.php", line 7, characters 25-27:
Expected int
File "fun_contra_bad.php", line 4, characters 28-35:
But got arraykey
